# backend/src/models/simulator-prisma.ts
@@ -9,6 +9,7 @@ export class SimulatorPrismaStore implements SimulatorStore {
     constructor(client: PrismaClient) {
         this.client = client
         this.getSimulator = this.getSimulator.bind(this)
+        this.getSimulatorByName = this.getSimulatorByName.bind(this)
         this.getSimulators = this.getSimulators.bind(this)
         this.getSimulatorsByCompanyId = this.getSimulatorsByCompanyId.bind(this)
         this.createSimulator = this.createSimulator.bind(this)
@@ -19,6 +20,19 @@ export class SimulatorPrismaStore implements SimulatorStore {
         let simulator: Simulator | null
         try {
             simulator = await this.client.simulator.findUnique({ where: { id } })
+        }
+        catch (e) {
+            return { ok: false, err: { code: prismaCatchToStoreError(e), msg: "internal server error" }, exception: e as Error }
+        }
+        if (!simulator) {
+            return { ok: false, err: { code: StoreErrorCode.notFound, msg: "simulator not found" } }
+        }
+        return { ok: true, data: simulator }
+    }
+    async getSimulatorByName(name: string): Promise<ResultStore<Simulator>> {
+        let simulator: Simulator | null
+        try {
+            simulator = await this.client.simulator.findUnique({ where: { name: name } })
         }
         catch (e) {
             return { ok: false, err: { code: prismaCatchToStoreError(e), msg: "internal server error" }, exception: e as Error }
